--- a/exam.css
+++ b/exam.css
@@ -38,7 +38,7 @@ body,td,th {
 #scanner {
 	height: 100px;
 	width: 100px;
-	padding-left: 100px}
+	padding-left: 100px;}
 	
 #contact {
 	float: left;
