--- a/exam.css
+++ b/exam.css
@@ -46,7 +46,7 @@ body,td,th {
 	border-right-style: solid;
 	margin:0px .8em 0px 0px;}
 
-#contact image{
+#contactImage{
 	width: 100px;
 	height: 100px;
 	padding-left: 300px;
