--- a/exam.css
+++ b/exam.css
@@ -64,14 +64,14 @@ body,td,th {
 	}
 
 #looks {
-	background-color: #FF3;
+	background-color: lighsalmon;
 	float: left;
 	width: 300px;
 	padding:1em;
 	margin:0px 1em 1em 0px;
 }
 
-.heading {background-color:#FF3;
+.heading {background-color: lightcoral;
 padding:.75em;
 text-align:center;}
 
