--- a/exam.css
+++ b/exam.css
@@ -78,7 +78,7 @@ text-align:center;}
 .align {text-align:center;}
 
 .steve {
-border-right:#009 solid 1px;
+border-right: lightsalmon solid 1px;
 padding:0px 2.5em 0px;
 width:500px;
 margin:0px auto
