--- a/exam.css
+++ b/exam.css
@@ -66,7 +66,7 @@ body,td,th {
 	margin-top:3em!important;}
 
 #looks {
-	background-color: lighsalmon;
+	background-color: lightsalmon;
 	float: left;
 	width: 300px;
 	padding:1em;
