--- a/exam.css
+++ b/exam.css
@@ -32,7 +32,7 @@ body,td,th {
 	clear:left;
 	float: left;
 	width: 300px;
-	border-right-style: solid;
+	border: outset;
 	margin:0px .8em 0px 0px;}
 
 #scanner {
@@ -45,20 +45,21 @@ body,td,th {
 #contact {
 	float: left;
 	width: 300px;
-	border-right-style: solid;
+	border: outset;
 	margin:0px .8em 0px 0px;}
 
 #contactImage {
 	width: 100px;
 	height: 100px;
 	display: block;
-	margin-left: auto;
-	margin-right: auto;}
+	margin-left: 100px;
+	margin-right: 100px;}
 	
 #picture {
 	float: left;
 	width: 300px;
-	margin:0px .8em 0px 0px;}
+	margin:0px .8em 0px 0px;
+	border: outset;}
 	
 #compete {
 	clear:both;
