--- a/exam.css
+++ b/exam.css
@@ -32,6 +32,7 @@ body,td,th {
 	clear:left;
 	float: left;
 	width: 300px;
+	height: 500px;
 	border: outset;
 	margin:0px .8em 0px 0px;}
 
@@ -45,6 +46,7 @@ body,td,th {
 #contact {
 	float: left;
 	width: 300px;
+	height: 500px;
 	border: outset;
 	margin:0px .8em 0px 0px;}
 
@@ -58,6 +60,7 @@ body,td,th {
 #picture {
 	float: left;
 	width: 300px;
+	height: 500px;
 	margin:0px .8em 0px 0px;
 	border: outset;}
 	
